# debugger-memory-agent

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FindJNI.cmake  FindJNI11.cmake  LICENSE  README.md  SetJavaHomeFromJavaExecutable.cmake  build.cmd  contributing.md  library.cpp  test_runner.py  types.h  utils.cpp  utils.h
publish/: .gitignore  build.gradle  gradle.properties  settings.gradle
src/: agent.cpp  allocation_sampling.cpp  allocation_sampling.h  cancellation_checker.cpp  cancellation_checker.h  cancellation_manager.cpp  cancellation_manager.h  gc_roots.cpp  gc_roots.h  global_data.h  heap_dump.cpp  heap_dump.h  log.cpp  log.h  memory_agent_action.h  memory_agent_action.hpp  obect_size.cpp  object_size.cpp  object_size.h  objects_size.cpp  objects_size.h  progress_manager.cpp  progress_manager.h  size_by_classes.cpp  size_by_classes.h  timed_action.cpp  timed_action.h  timed_action.hpp  types.h  utils.cpp  utils.h
src/reachability/: objects_of_class_in_heap.cpp  objects_of_class_in_heap.h
src/roots/: infos.cpp  infos.h  paths_to_closest_gc_roots.cpp  paths_to_closest_gc_roots.h  roots_state.cpp  roots_state.h  roots_tags.cpp  roots_tags.h
src/sizes/: dominator_tree.cpp  dominator_tree.h  retained_size_action.cpp  retained_size_action.h  retained_size_and_held_objects.cpp  retained_size_and_held_objects.h  retained_size_by_classes.cpp  retained_size_by_classes.h  retained_size_by_classloaders.cpp  retained_size_by_classloaders.h  retained_size_by_objects.cpp  retained_size_by_objects.h  retained_size_by_objects_merged.cpp  retained_size_by_objects_merged.h  retained_size_via_dominator_tree.cpp  retained_size_via_dominator_tree.h  shallow_size_by_classes.cpp  shallow_size_by_classes.h  sizes_callbacks.cpp  sizes_callbacks.h  sizes_state.cpp  sizes_state.h  sizes_tags.cpp  sizes_tags.h  tag_info_array.cpp  tag_info_array.h
test_data/: .gitignore
test_data/outs/: ManyOperations.out  capabilities.FindGcRoots.out  execution.ShallowAndRetainedSizeByClassesForObject.out  reachability.ClassReachability.out  reachability.ClassReachableFromDifferentReferenceTypes.out  reachability.ClassReachableFromReferencesChain.out  roots.Array.out  roots.CallTwice.out  roots.Cycle.out  roots.Field.out  roots.LocalVariable.out  roots.NestedArrays.out  roots.PathsToThreeRoots.out  roots.RootOnly.out  roots.ShortestPathForUnreachable.out  roots.ShortestPathToGCRoot.out  roots.ShortestPathWhenObjectIsRoot.out  roots.ShortestPathWithCycle.out  roots.ShortestPathsForUnreachable.out  roots.ShortestPathsToGcRoots.out  roots.ShortestPathsWithCycle.out  roots.TwoLinksFromArray.out  roots.TwoLinksFromOneObject.out  roots.Unreachable.out  roots.WithLimit.out  roots.weaksoft.ReachableFromDifferentReferenceTypes.out  roots.weaksoft.UnreachableFromStrongReferences.out  size.AfterReferenceShared.out  size.ArraySize.out  size.IntegerWrapper.out  size.ObjectsWithCommonSubtree.out  size.PrimitiveArraySize.out  size.RecursiveReferences.out  size.TwoSequentialCalls.out  size.WithHeldObjects1.out  size.WithHeldObjects2.out  size.WithHeldObjects3.out  size.WithHeldObjects4.out  size.WithHeldObjects5.out  size.classes.Inheritance.out  (+19 more)
test_data/outs32/: AgentLoaded.out  ManyOperations.out  reachability.ClassReachability.out  reachability.ClassReachableFromReferencesChain.out  roots.Cycle.out  roots.Field.out  roots.LocalVariable.out  roots.NestedArrays.out  roots.ShortestPathsForUnreachable.out  roots.ShortestPathsWhenObjectIsRoot.out  roots.ShortestPathsWithCycle.out  roots.TwoLinksFromOneObject.out  roots.WithObjectsLimit.out  roots.WithPathsLimit.out  roots.weaksoft.ReachableFromStrongReference.out  size.AfterReferenceShared.out  size.ArraySize.out  size.IntegerWrapper.out  size.PrimitiveArraySize.out  size.RecursiveReferences.out  size.TwoSequentialCalls.out  size.WithHeldObjects1.out  size.WithHeldObjects2.out  size.WithHeldObjects3.out  size.WithHeldObjects4.out  size.WithHeldObjects5.out  size.classes.Inheritance.out  size.classes.ManyClasses.out  size.classes.ManyClassesTwice.out  size.classes.NoClassesPassed.out  size.classes.OneClass.out  size.classes.Unreachable.out  size.classes.WithoutInstances.out  size.classes.retained.ThreeClassesWithCommonSubtree1.out  size.classes.retained.ThreeClassesWithCommonSubtree2.out  size.classes.retained.TwoClassesWithCommonSubtree1.out  size.classes.retained.TwoClassesWithCommonSubtree2.out  size.classes.retained.TwoClassesWithCycle2.out  size.many.OneInSubtreeOfAnother.out  size.many.SameObjectPassed.out  (+3 more)
test_data/src/: AgentLoaded.java  ManyOperations.java
test_data/src/capabilities/: EstimateSize.java  FindGcRoots.java
test_data/src/common/: ExecutionTestBase.java  Reference.java  TestBase.java  TestNode.java  TestTreeNode.java  TimeoutTestBase.java
test_data/src/execution/: EstimateRetainedSize.java  PathsToClosestGCRoots.java  RetainedSizeAndHeldObjects.java  RetainedSizeByClasses.java  RetainedSizeByClassesForObject.java  RetainedSizeByObjects.java  ShallowAndRetainedSizeByClasses.java  ShallowAndRetainedSizeByClassesForObject.java  ShallowSizeByClasses.java  ShallowSizeByClassesForObject.java
test_data/src/reachability/: ClassReachability.java  ClassReachableFromDifferentReferenceTypes.java  ClassReachableFromReferencesChain.java
test_data/src/roots/: Array.java  CallTwice.java  Cycle.java  Deep.java  Field.java  LocalVariable.java  NestedArrays.java  PathsToThreeRoots.java  RootOnly.java  ShortestPathForUnreachable.java  ShortestPathToGCRoot.java  ShortestPathWhenObjectIsRoot.java  ShortestPathWithCycle.java  ShortestPathsForUnreachable.java  ShortestPathsToGCRoots.java  ShortestPathsToGcRoots.java  ShortestPathsWhenObjectIsRoot.java  ShortestPathsWithCycle.java  StaticField.java  TwoLinksFromArray.java  TwoLinksFromOneObject.java  Unreachable.java  WithLimit.java  WithObjectsLimit.java  WithPathsLimit.java
test_data/src/size/: AfterReferenceShared.java  ArraySize.java  HeldObjects.java  IntegerWrapper.java  (+9 more)
(+53 files in other folders)
